feat:filtre sans pagination

--- a/templates/pages/layouts/_navbar.html.twig
+++ b/templates/pages/layouts/_navbar.html.twig
@@ -9,7 +9,7 @@
 
             <li class="nav-item">
                 <a class="nav-link {% if current_menu is defined and current_menu =='property_index' %}active {% endif %}"
-                    href="#">Voir tous les biens</a>
+                    href="{{path('property_index')}}">Acheter</a>
             </li>
 
 
