--- a/templates/admin/property/layouts/form.html.twig
+++ b/templates/admin/property/layouts/form.html.twig
@@ -1,5 +1,5 @@
 {{form_start(formProperty)}}
-<div class="jumbotron">
+<div class="img-thumbnail p-5" style="box-shadow: 10px 40px 150px #c5c1c1;">
     <div class="row">
         <div class="col-md-4">{{form_row(formProperty.title)}}</div>
         <div class="col-md-4">{{form_row(formProperty.surface)}}</div>
@@ -17,7 +17,7 @@
         <div class="col-md-2">{{form_row(formProperty.postal_code)}}</div>
         <div class="col-md-2">{{form_row(formProperty.sold)}}</div>
     </div>
-    {{form_widget(formProperty)}}
+    {{form_rest(formProperty)}}
 </div>
 
 <div class="row">
