--- a/templates/pages/property/index.html.twig
+++ b/templates/pages/property/index.html.twig
@@ -14,6 +14,9 @@
                 {{form_row(form_search.maxPrice)}}
             </div>
             <div class="col">
+                {{form_row(form_search.options)}}
+            </div>
+            <div class="col">
                 <div class="form-group">
                     <button class="btn btn-primary"> Recherher</button>
                 </div>
