feat:Uplad des images part1

--- a/templates/admin/property/layouts/form.html.twig
+++ b/templates/admin/property/layouts/form.html.twig
@@ -12,7 +12,8 @@
         <div class="col-md-2">{{form_row(formProperty.floor)}}</div>
     </div>
     <div class="row">
-        <div class="col-md-4">{{form_row(formProperty.adress)}}</div>
+        <div class="col-md-2">{{form_row(formProperty.imageFile)}}</div>
+        <div class="col-md-3">{{form_row(formProperty.adress)}}</div>
         <div class="col-md-4">{{form_row(formProperty.city)}}</div>
         <div class="col-md-2">{{form_row(formProperty.postal_code)}}</div>
         <div class="col-md-2">{{form_row(formProperty.sold)}}</div>
