--- a/templates/pages/property/index.html.twig
+++ b/templates/pages/property/index.html.twig
@@ -35,5 +35,9 @@
         </div>
         {% endfor %}
     </div>
+    <div class="pagination">
+
+        {{ knp_pagination_render(properties) }}
+    </div>
 </div>
 {% endblock %}
