--- a/templates/pages/property/partials/_property.html.twig
+++ b/templates/pages/property/partials/_property.html.twig
@@ -1,4 +1,8 @@
 <div class="card mb-4">
+    {% if property.imageName %}
+    <img src="{{ vich_uploader_asset(property,'imageFile')}}" alt="" class="card-img-top"
+        style="width: 100%; height: auto;">
+    {% endif %}
     <div class="card-body">
         <h5 class="card-title">
             <a href="{{ path('property_show',{slug:property.slug, id:property.id})}}">
