--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,8 +21,9 @@
     </div>
     {% endblock %}
     {% block javascripts %}
-    {# <script src="{{ asset('js/bootstrap.min.js')}}"></script>
-    <script src="{{asset('jquery-3.2.1.min.js')}}"></script> #}
+
+
+    <script src="{{asset('js/jquery-3.2.1.min.js')}}"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
     <script>
