--- a/templates/pages/layouts/_navbar.html.twig
+++ b/templates/pages/layouts/_navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary" style="background-color:  #2C3E50;">
     <a class="navbar-brand" href="{{ path('home')}}">Mon Agence</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
