--- a/templates/pages/property/partials/_property.html.twig
+++ b/templates/pages/property/partials/_property.html.twig
@@ -2,6 +2,11 @@
     {% if property.imageName %}
     <img src="{{ vich_uploader_asset(property,'imageFile')}}" alt="" class="card-img-top"
         style="width: 100%; height: auto;">
+    {% else %}
+
+    <img src="{{ asset('images/default.png')}}" alt="pas d'image" class="card-img-top"
+        style="width: 100%; height: auto;">
+
     {% endif %}
     <div class="card-body">
         <h5 class="card-title">
