--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,9 +6,7 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('css/bootstrap.min.css')}}">
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css')}}">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/css/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/app.css')}}">
 
     {% endblock %}
 </head>
@@ -22,13 +20,8 @@
     {% endblock %}
     {% block javascripts %}
 
+    <script src="{{asset('build/app.js')}}"></script>
 
-    <script src="{{asset('js/jquery-3.2.1.min.js')}}"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
-    <script>
-        $('select').select2();
-    </script>
     {% endblock %}
 </body>
 
