--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -21,7 +21,7 @@
                             href="{{path('property_show',{'id':property.id, 'slug':property.slug})}}">{{property.title}}</a>
                     </h5>
                     <p class="card-text">{{property.city}}({{property.postalCode}})</p>
-                    <div class="text-color price-config">{{property.FormattedPrice}} FC
+                    <div class="text-color price-config">{{property.price|formattedPrice}}
                     </div>
                 </div>
             </div>
