--- a/templates/pages/property/show.html.twig
+++ b/templates/pages/property/show.html.twig
@@ -4,6 +4,17 @@
 
 {% block body %}
 <div class="jumbotron">
+ {% for message in app.flashes('success') %}
+    <div class="alert alert-success">
+        {{message}}
+    </div>
+    {% endfor %}
+    {% if not form_contact.vars.valid %}
+        <div class="alert alert-danger">
+        Certaines informations du formulaire ne sont pas valides!
+        Veuillez recommencer .
+    </div>
+    {% endif %}
     <div class="container">
         <div class="row">
             <div class="col-md-8">
@@ -22,6 +33,27 @@
                 <h5>{{property.rooms}} -pièces {{property.surface}}</h5>
                 <div class="text-color price-config">{{property.FormattedPrice}} FC <br>
                     <a href="#" class="btn btn-primary">Contacter l'agence</a>
+                </div>
+                <div>
+                    {{form_start(form_contact)}}
+                    <div class="mt-4 p-2" id="formContact">
+                        <div class="row">
+                            <div class="col">{{form_row(form_contact.firstname)}}</div>
+                            <div class="col">{{form_row(form_contact.lastname)}}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col">{{form_row(form_contact.tel)}}</div>
+                            <div class="col">{{form_row(form_contact.email)}}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col">{{form_row(form_contact.mesage)}}</div>
+
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Envoyer</button>
+                        </div>
+                    </div>
+                    {{form_end(form_contact)}}
                 </div>
             </div>
         </div>
