feat:update any templates

--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -1,7 +1,7 @@
 <h1>Salut!</h1>
-
+<p>{{contact.mesage}}</p>
 <p>
-    j'ai choisi le produit <td><a href="{{url('property_show',{id:contact.property.id,slug:contact.property.slug})}}">{{contact.property.title}}</a></td>
+Bien choisi: <td><a href="{{url('property_show',{id:contact.property.id,slug:contact.property.slug})}}">{{contact.property.title}}</a></td>
 </p>
 {# <p><code>{{ email.to[0].address }}</code></p> #}
  <table border="1">
