--- a/templates/property_new/partials/_nav.html.twig
+++ b/templates/property_new/partials/_nav.html.twig
@@ -99,7 +99,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html"><img src="assets/img/main-logo.png" alt="" width="80%" height="60px"></a>
+      <a class="navbar-brand text-brand" href="{{ path('home')}}"><img src="{{asset('assets/img/main-logo.png')}}" alt="" width="80%" height="60px"></a>
       <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
       </button>
@@ -109,7 +109,7 @@
             <a class="nav-link active" href="{{ path('home')}}">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">A propos</a>
+            <a class="nav-link" href="#">A propos</a>
           </li>
     
           <li class="nav-item">
