--- a/templates/property_new/partials/banner.html.twig
+++ b/templates/property_new/partials/banner.html.twig
@@ -3,7 +3,7 @@
     <div id="carousel" class="owl-carousel owl-theme">
      
      {% for property in properties %}
-     <div class="carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-3.jpg)">
+     <div class="carousel-item-a intro-item bg-image" style="background-image: url({{ vich_uploader_asset(property,'imageFile')}})">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -11,13 +11,13 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">{{property.city}}({{property.postalCode}})
-                      <br> 78345</p>
+                    <p class="intro-title-top">{{property.adress}}
+                      <br> code postal: {{property.postalCode}}</p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Alira
-                      <br> Roan Road One</h1>
+                      <span class="color-b">{{property.id}} </span> {{property.title}}
+                      <br> {{property.city}}</h1>
                     <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | {{property.price|formattedPrice}}</span></a>
+                      <a href="{{ path('property_show',{slug:property.slug, id:property.id})}}"><span class="price-a">Prix | {{property.formattedPrice}} $</span></a>
                     </p>
                   </div>
                 </div>
