--- a/templates/property_new/show.html.twig
+++ b/templates/property_new/show.html.twig
@@ -6,8 +6,8 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single"> {{property.title}}</h1>
-              <span class="color-text-a"> {{property.city}}, {{property.postalcode}}</span>
+              <h1 class="title-single"> {{property.city}}</h1>
+              <span class="color-text-a"> {{property.adress}}, {{property.postalcode}}</span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -61,7 +61,7 @@
                   <div class="row">
                     <div class="col-sm-12">
                       <div class="title-box-d section-t4">
-                        <h3 class="title-d">{{property.title}}</h3>
+                        <h3 class="title-d">Caracteristique</h3>
                       </div>
                     </div>
                   </div>
@@ -72,16 +72,18 @@
                         <span>{{property.id}}</span>
                       </li>
                       <li class="d-flex justify-content-between">
-                        <strong>Location:</strong>
+                        <strong>Ville:</strong>
                         <span>{{property.city}}, </span>
                       </li>
                       <li class="d-flex justify-content-between">
-                        <strong>Property Type:</strong>
-                        <span>House</span>
+                        <strong>Options:</strong>
+                        {% for option in property.options %}
+                          <span>{{option.name}}</span>
+                        {% endfor %}
                       </li>
                       <li class="d-flex justify-content-between">
-                        <strong>Status:</strong>
-                        <span>Sale</span>
+                        <strong>Etage:</strong>
+                        <span>{{property.floor}}</span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Surface:</strong>
@@ -90,26 +92,58 @@
                         </span>
                       </li>
                       <li class="d-flex justify-content-between">
-                        <strong>Beds:</strong>
+                        <strong>Chambre:</strong>
                         <span>{{property.rooms}}</span>
                       </li>
                       <li class="d-flex justify-content-between">
-                        <strong>Baths:</strong>
+                        <strong>Cuisine:</strong>
                         <span>2</span>
                       </li>
                       <li class="d-flex justify-content-between">
-                        <strong>Garage:</strong>
+                        <strong>Salle de bain:</strong>
                         <span>1</span>
                       </li>
                     </ul>
+                    <!--              Bonus                         -->
+                      <div class="row section-t3">
+                        <div class="col-sm-12">
+                          <div class="title-box-d">
+                            <h3 class="title-d">Bonus</h3>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="amenities-list color-text-a">
+                        <ul class="list-a no-margin">
+                          {% for bonus in property.bonuses %}
+                          {% if not bonus.title %}
+                          <li class="alert alert-warning text-center">Pas de bonus...</li>
+                            {% else %}
+                            <li>{{bonus.title}}</li>
+                          {% endif %}
+                          
+                          {% endfor %}
+                        </ul>
+                      </div>
+                    <!--FIN BONUS-->
                   </div>
                 </div>
               </div>
               <div class="col-md-7 col-lg-7 section-md-t3">
                 <div class="row">
                   <div class="col-sm-12">
+                     {% if property.imageName %}
+                    <img src="{{ vich_uploader_asset(property,'imageFile')}}" alt="" class="img-a img-fluid"
+                        style="width: 100%; height: auto;">
+                    {% else %}
+
+                    <img src="{{ asset('images/default.png')}}" alt="pas d'image" class="img-a img-fluid"
+                        style="width: 100%; height: auto;">
+
+                    {% endif %}
+                  </div>
+                  <div class="col-sm-12">
                     <div class="title-box-d">
-                      <h3 class="title-d"> Description du bien</h3>
+                      <h3 class="title-d"> Description</h3>
                     </div>
                   </div>
                 </div>
@@ -121,47 +155,41 @@
                    {{property.description}}.
                   </p>
                 </div>
-                <div class="row section-t3">
-                  <div class="col-sm-12">
-                    <div class="title-box-d">
-                      <h3 class="title-d">Bonus</h3>
-                    </div>
-                  </div>
-                </div>
-                <div class="amenities-list color-text-a">
-                  <ul class="list-a no-margin">
-                    {% for bonus in property.bonuses %}
-                      
-                   
-                    <li>{{bonus.title}}</li>
-                    
-                     {% endfor %}
-                  </ul>
-                </div>
+              
               </div>
             </div>
           </div>
           <div class="col-md-10 offset-md-1">
             <ul class="nav nav-pills-a nav-pills mb-3 section-t3" id="pills-tab" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" id="pills-video-tab" data-toggle="pill" href="#pills-video" role="tab" aria-controls="pills-video" aria-selected="true">Video</a>
+                <a class="nav-link active" id="pills-plans-tab" data-toggle="pill" href="#pills-plans" role="tab" aria-controls="pills-plans" aria-selected="false">Photo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="pills-plans-tab" data-toggle="pill" href="#pills-plans" role="tab" aria-controls="pills-plans" aria-selected="false">Floor Plans</a>
+                <a class="nav-link" id="pills-video-tab" data-toggle="pill" href="#pills-video" role="tab" aria-controls="pills-video" aria-selected="true">Video</a>
               </li>
+      
               <li class="nav-item">
-                <a class="nav-link" id="pills-map-tab" data-toggle="pill" href="#pills-map" role="tab" aria-controls="pills-map" aria-selected="false">Ubication</a>
+                <a class="nav-link" id="pills-map-tab" data-toggle="pill" href="#pills-map" role="tab" aria-controls="pills-map" aria-selected="false">Géo Localisation</a>
               </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
+              <div class="tab-pane fade" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
+                 {% if property.imageName %}
+                    <img src="{{ vich_uploader_asset(property,'imageFile')}}" alt="" class="img-a img-fluid"
+                        style="width: 100%; height: auto;">
+                    {% else %}
+
+                    <img src="{{ asset('images/default.png')}}" alt="pas d'image" class="img-a img-fluid"
+                        style="width: 100%; height: auto;">
+
+                    {% endif %}
+              </div>
               <div class="tab-pane fade show active" id="pills-video" role="tabpanel" aria-labelledby="pills-video-tab">
                 <iframe src="https://player.vimeo.com/video/73221098" width="100%" height="460" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
               </div>
-              <div class="tab-pane fade" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
-                <img src="assets/img/plan2.jpg" alt="" class="img-fluid">
-              </div>
+              
               <div class="tab-pane fade" id="pills-map" role="tabpanel" aria-labelledby="pills-map-tab">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834" width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/place/Kinshasa,+R%C3%A9publique+d%C3%A9mocratique+du+Congo/@-4.4009483,15.1826551,11z/data=!4m13!1m7!3m6!1s0x1a6a3130fe066a8b:0x168b7e4e1f52378d!2sKinshasa,+R%C3%A9publique+d%C3%A9mocratique+du+Congo!3b1!8m2!3d-4.4419311!4d15.2662931!3m4!1s0x1a6a3130fe066a8b:0x168b7e4e1f52378d!8m2!3d-4.4419311!4d15.2662931?hl=fr-FR" width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -175,7 +203,7 @@
             </div>
             <div class="row">
               <div class="col-md-6 col-lg-4">
-                <img src="assets/img/agent-4.jpg" alt="" class="img-fluid">
+                <img src="{{asset('assets/img/agent-4.jpg')}}" alt="" class="img-fluid">
               </div>
               <div class="col-md-6 col-lg-4">
                 <div class="property-agent">
@@ -187,11 +215,11 @@
                   </p>
                   <ul class="list-unstyled">
                     <li class="d-flex justify-content-between">
-                      <strong>Phone:</strong>
+                      <strong>Telephone :</strong>
                       <span class="color-text-a">(222) 4568932</span>
                     </li>
                     <li class="d-flex justify-content-between">
-                      <strong>Mobile:</strong>
+                      <strong>Whatsapp:</strong>
                       <span class="color-text-a">777 287 378 737</span>
                     </li>
                     <li class="d-flex justify-content-between">
@@ -242,12 +270,15 @@
                       <div class="col-md-12 mb-1">
                         <div class="form-group">
                           {{form_row(form_contact.firstname,{'attr':{'class':'form-control-lg form-control-a','id':'inputName'}})}}
-                         <div class="col">{{form_row(form_contact.lastname)}}</div>
+                         <div class="form-group">{{form_row(form_contact.lastname)}}</div>
                         </div>
                       </div>
                       <div class="col-md-12 mb-1">
                         <div class="form-group">
                          {{form_row(form_contact.email,{'attr':{'class':'form-control-lg form-control-a','id':'inputEmail1'}})}} 
+                        </div>
+                         <div class="form-group">
+                         {{form_row(form_contact.tel,{'attr':{'class':'form-control-lg form-control-a','id':'inputEmail1'}})}} 
                         </div>
                       </div>
                       <div class="col-md-12 mb-1">
